File Output Node does not work with Time Remapping #69060

Closed
opened 2019-08-22 18:29:25 +02:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: 2.80 f6cb5f5449

Short description of error
When the file output node is used together with the time remapping feature (for example to render at a different framerate), too few images are output.

Exact steps for others to reproduce the error
time_remapping.blend
Notes: the file has time remapping set to 1:4.
The regular output goes to numbered files in the folder "out".
The file output goes to files named "file_out####.png" in the folder out.

  1. Open the file.
  2. Render animation.

I would expect there to be 8 files from both the file output and the regular output.
But instead, there are only 3 files from the file output node.

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: 2.80 f6cb5f54494e **Short description of error** When the file output node is used together with the time remapping feature (for example to render at a different framerate), too few images are output. **Exact steps for others to reproduce the error** [time_remapping.blend](https://archive.blender.org/developer/F7687668/time_remapping.blend) Notes: the file has time remapping set to 1:4. The regular output goes to numbered files in the folder "out". The file output goes to files named "file_out####.png" in the folder out. 1. Open the file. 2. Render animation. I would expect there to be 8 files from both the file output and the regular output. But instead, there are only 3 files from the file output node.

Added subscriber: @Foaly

Added subscriber: @Foaly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking (sorry this has been lying around for so long)...

Confirmed, checking (sorry this has been lying around for so long)...
Philipp Oeser self-assigned this 2020-03-25 15:54:12 +01:00

This issue was referenced by ff62481f65

This issue was referenced by ff62481f65f079d56719ed03dd58b0e7ccc8d574
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69060
No description provided.